properly added css folder

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Weather App</title>
 </head>
 <body>
+    <h1>WEATHER DASHBOARD</h1>
+    
     <input type="text" id="input" placeholder="Search for a location..." />
 
     <script src="index.js"></script>
