--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 </head>
 <body>
     <h1>WEATHER DASHBOARD</h1>
-
+    <p> Today's date is:  <span id="date"></span></p>
     <input type="text" id="input" placeholder="Search for a location..." />
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
     <script src="index.js"></script>
     
