--- a/index.html
+++ b/index.html
@@ -9,12 +9,26 @@
 </head>
 <body>
     <h1>WEATHER DASHBOARD</h1>
-    <p> Today's date is:  <span id="date"></span></p>
-    <input type="text" id="input" placeholder="Search for a location..." />
+    <!-- &nbsp; is how to add a space between header and span text! -->
+    <h3> Today's date is: &nbsp; <span id="date"></span></h3>
+    <p> SEARCH FOR A CITY: </p>
+    <input type="text" id="input" placeholder="ENTER HERE"/>
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <!-- <script>
+        var keyHash = "your-api-key-here";
+        var apikey;
+        fetch(
+          `https://ljgvrb40q2.execute-api.us-west-2.amazonaws.com/dev/keyprr/${keyHash}`
+        )
+          .then((res) => res.json())
+          .then(({ data }) => (apikey = data));
+      </script> -->
+
 
     <script src="index.js"></script>
     
