added five day forecast

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
     <h3> Today's date is: &nbsp; <span id="date"></span></h3>
     <p> SEARCH FOR A CITY: </p>
     <input type="text" id="input" placeholder="ENTER HERE"/>
+    <!-- <div>
+      <div id="history"></div>
+    </div> -->
+    <div>
+      <div id="currentDay"></div>
+    </div>
+    <div>
+      <div id="forecast"></div>
+    </div>
+
 
 
 
