reogranized and appended history

--- a/index.html
+++ b/index.html
@@ -7,21 +7,39 @@
     <title>Weather App</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
+<main>
+  <h1>WEATHER DASHBOARD</h1>
+  <!-- &nbsp; is how to add a space between header and span text! -->
+  <h3> Today's date: &nbsp; <span id="date"></span></h3>
+
+</main>
 <body>
-    <h1>WEATHER DASHBOARD</h1>
-    <!-- &nbsp; is how to add a space between header and span text! -->
-    <h3> Today's date is: &nbsp; <span id="date"></span></h3>
+
     <p> SEARCH FOR A CITY: </p>
     <input type="text" id="input" placeholder="ENTER HERE"/>
-    <!-- <div>
-      <div id="history"></div>
-    </div> -->
+
+    <div>
+      <div id="historyPlacement"></div>
+    </div>
+
+    <div> 
+      <div id="theDate"></div>
+
+    </div>
+
     <div>
       <div id="currentDay"></div>
     </div>
+
+
+  
+
     <div>
+      <!-- <p>5 Day Forecast...</p> -->
       <div id="forecast"></div>
     </div>
+  
 
 
 
