updated readme and testing css

--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
   <h3> Today's date: &nbsp; <span id="date"></span></h3>
 
 </main>
+
+
 <body>
 
+
+  <section class="searchDay">
     <p> SEARCH FOR A CITY: </p>
     <input type="text" id="input" placeholder="ENTER HERE"/>
 
@@ -23,20 +27,24 @@
       <div id="historyPlacement"></div>
     </div>
 
-    <div> 
-      <div id="theDate"></div>
-
-    </div>
-
     <div>
       <div id="currentDay"></div>
     </div>
+  </section>
 
+    <!-- <div>
+      <div id="historyPlacement"></div>
+    </div> -->
 
+    <div> 
+      <div id="theDate"></div>
+    </div>
+
+    <!-- <div>
+      <div id="currentDay"></div>
+    </div> -->
   
-
     <div>
-      <!-- <p>5 Day Forecast...</p> -->
       <div id="forecast"></div>
     </div>
   
