--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
 <body>
 
 
-  <section class="searchDay">
-    <p> SEARCH FOR A CITY: </p>
-    <input type="text" id="input" placeholder="ENTER HERE"/>
-
+  <section style="display: flex; align-items: flex-start;">
     <div>
-      <div id="historyPlacement"></div>
+      <p> SEARCH FOR A CITY: </p>
+      <input type="text" id="input" placeholder="ENTER HERE"/>
+
+      <div>
+        <div id="historyPlacement"></div>
+      </div>
     </div>
 
     <div>
@@ -32,24 +34,14 @@
     </div>
   </section>
 
-    <!-- <div>
-      <div id="historyPlacement"></div>
-    </div> -->
-
     <div> 
       <div id="theDate"></div>
     </div>
-
-    <!-- <div>
-      <div id="currentDay"></div>
-    </div> -->
   
     <div>
       <div id="forecast"></div>
     </div>
   
-
-
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
